--- a/src/ex_p7_benfica_porto.ipynb
+++ b/src/ex_p7_benfica_porto.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "4   5      313  2015-06-20  android"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "[301 rows x 4 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,14 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\TG\\AppData\\Local\\Temp\\ipykernel_18268\\1566162886.py:2: SettingWithCopyWarning:\n",
+      "C:\\Users\\TG\\AppData\\Local\\Temp\\ipykernel_18268\\1719461271.py:2: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -330,160 +330,16 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>created_at</th>\n",
-       "      <th>device</th>\n",
-       "      <th>year_month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>247</td>\n",
-       "      <td>2015-07-13</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2015-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>313</td>\n",
-       "      <td>2015-06-20</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2015-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>317</td>\n",
-       "      <td>2014-08-08</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2014-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>443</td>\n",
-       "      <td>2015-06-17</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2015-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>506</td>\n",
-       "      <td>2015-04-06</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2015-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1190</th>\n",
-       "      <td>1191</td>\n",
-       "      <td>54666</td>\n",
-       "      <td>2014-08-09</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2014-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1191</th>\n",
-       "      <td>1192</td>\n",
-       "      <td>54703</td>\n",
-       "      <td>2015-01-29</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2015-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1195</th>\n",
-       "      <td>1196</td>\n",
-       "      <td>54933</td>\n",
-       "      <td>2015-04-04</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2015-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1196</th>\n",
-       "      <td>1197</td>\n",
-       "      <td>54937</td>\n",
-       "      <td>2014-08-05</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2014-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1197</th>\n",
-       "      <td>1198</td>\n",
-       "      <td>54947</td>\n",
-       "      <td>2015-02-01</td>\n",
-       "      <td>android</td>\n",
-       "      <td>2015-02</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>301 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id  user_id created_at   device year_month\n",
-       "3        4      247 2015-07-13  android    2015-07\n",
-       "4        5      313 2015-06-20  android    2015-06\n",
-       "5        6      317 2014-08-08  android    2014-08\n",
-       "8        9      443 2015-06-17  android    2015-06\n",
-       "10      11      506 2015-04-06  android    2015-04\n",
-       "...    ...      ...        ...      ...        ...\n",
-       "1190  1191    54666 2014-08-09  android    2014-08\n",
-       "1191  1192    54703 2015-01-29  android    2015-01\n",
-       "1195  1196    54933 2015-04-04  android    2015-04\n",
-       "1196  1197    54937 2014-08-05  android    2014-08\n",
-       "1197  1198    54947 2015-02-01  android    2015-02\n",
-       "\n",
-       "[301 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#agregar por ano e mes\n",
-    "df_android['year_month'] = df_android.created_at.dt.strftime('%Y-%m')\n",
-    "df_android"
+    "df_android['year_month'] = df_android.created_at.dt.strftime('%Y-%m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +445,7 @@
        "[301 rows x 2 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +564,7 @@
        "2015-07             24"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1718,7 +1574,7 @@
        "4       13     15"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,16 +1586,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['benfica porto'], dtype='object')"
+       "Index(['benfica', 'porto'], dtype='object')"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1750,14 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1777,7 @@
        "18       53     51     red"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1941,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
