sql queries de criação e inserção adicionadas em /sql

--- a/src/Reverse_Engineering.ipynb
+++ b/src/Reverse_Engineering.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "4           Reuniões de Equipa   Cliente 8  "
       ]
      },
-     "execution_count": 277,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "4           5  Reuniões de Coordenação        NaN"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
        "4                          39                          7  "
       ]
      },
-     "execution_count": 279,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "4  Colaborador 5          1000            40  PORTIMÃO     35      Mestrado"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        "4          5  Reuniões de Coordenação        NaN"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
        " 'Contactos Estado': 15}"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
        "4  Colaborador 5          1000              40  PORTIMÃO     35      Mestrado"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
        "array(['SEDE', 'FARO', 'PORTIMÃO', 'LAGOS'], dtype=object)"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
        "{'SEDE': 1, 'FARO': 2, 'PORTIMÃO': 3, 'LAGOS': 4}"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1398,7 @@
        "4  Colaborador 5          1000              40     35      Mestrado          3"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
        "       'Colaborador 9'], dtype=object)"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
        " 'Colaborador 9': 9}"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1569,7 @@
        "4          3               5  "
       ]
      },
-     "execution_count": 293,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
        " \"INSERT INTO Colaboradores (id_colaborador, nome, salario_base, horas_semanais, idade, qualificacao, id_equipa) VALUES (9, 'Colaborador 9', 900, 40, 26, 'Mestrado', 3);\"]"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1704,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1826,7 @@
        "4                          39           7  "
       ]
      },
-     "execution_count": 298,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
        " 'Cliente 25': 25}"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
        "[52416 rows x 7 columns]"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2119,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2269,7 +2269,7 @@
        "4           8       5  "
       ]
      },
-     "execution_count": 303,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2286,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2297,7 +2297,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2418,7 +2418,7 @@
        "4           8       5  "
       ]
      },
-     "execution_count": 305,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2443,7 +2443,7 @@
        " \"INSERT INTO Rel_Clientes_Colaboradores_Tarefas (id_rel, data_tarefa, hora_inicio, hora_fim, horas, id_colaborador, id_cliente, id_tarefa) VALUES (5, '2021-01-02 00:00:00', '00:00:00', '00:00:00', 0.0, 2, 8, 4);\"]"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2458,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2478,20 +2478,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"INSERT INTO Colaboradores (id_colaborador, nome, salario_base, horas_semanais, idade, qualificacao, id_equipa) VALUES (1, 'Colaborador 1', 850, 40, 23, 'Licenciatura', 1);\",\n",
-       " \"INSERT INTO Colaboradores (id_colaborador, nome, salario_base, horas_semanais, idade, qualificacao, id_equipa) VALUES (2, 'Colaborador 2', 875, 40, 25, 'Mestrado', 1);\",\n",
-       " \"INSERT INTO Colaboradores (id_colaborador, nome, salario_base, horas_semanais, idade, qualificacao, id_equipa) VALUES (3, 'Colaborador 3', 800, 40, 32, 'Mestrado', 1);\",\n",
-       " \"INSERT INTO Colaboradores (id_colaborador, nome, salario_base, horas_semanais, idade, qualificacao, id_equipa) VALUES (4, 'Colaborador 4', 900, 40, 21, 'Licenciatura', 2);\",\n",
-       " \"INSERT INTO Colaboradores (id_colaborador, nome, salario_base, horas_semanais, idade, qualificacao, id_equipa) VALUES (5, 'Colaborador 5', 1000, 40, 35, 'Mestrado', 3);\"]"
+       "[\"INSERT INTO Tarefas (id_tarefa, nome, descricao) VALUES (1, 'Lançamento Documentos', 'nan');\",\n",
+       " \"INSERT INTO Tarefas (id_tarefa, nome, descricao) VALUES (2, 'Validação', 'nan');\",\n",
+       " \"INSERT INTO Tarefas (id_tarefa, nome, descricao) VALUES (3, 'Gestão Comercial', 'nan');\",\n",
+       " \"INSERT INTO Tarefas (id_tarefa, nome, descricao) VALUES (4, 'Reuniões de Equipa', 'nan');\",\n",
+       " \"INSERT INTO Tarefas (id_tarefa, nome, descricao) VALUES (5, 'Reuniões de Coordenação', 'nan');\"]"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,14 +2503,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quantidade de queries inconsistente com quantidade de registos!\n"
+      "Quantidade de queries consistente com quantidade de registos!\n"
      ]
     }
    ],
@@ -2519,6 +2519,34 @@
     "    print('Quantidade de queries consistente com quantidade de registos!')\n",
     "else:\n",
     "    print('Quantidade de queries inconsistente com quantidade de registos!')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save de SQL queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabelas = {'tarefas': sql_insert_tarefas,\n",
+    "          'equipas': sql_insert_equipas,\n",
+    "          'colaboradores': sql_insert_colaboradores,\n",
+    "          'clientes': sql_insert_clientes,\n",
+    "          'rel': sql_insert_rel}\n",
+    "\n",
+    "with open('../sql/sql_create_queries.sql', 'w') as f:\n",
+    "    f.write('\\n'.join(sql_create_queries))\n",
+    "\n",
+    "for key, value in tabelas.items():\n",
+    "    with open(f\"../sql/sql_insert_{key}.sql\", 'w') as f:\n",
+    "        f.write('\\n'.join(value))"
    ]
   },
   {
@@ -3891,7 +3919,7 @@
     "\n",
     "dtype_mapping = {col: str(dtype) for col, dtype in merged.dtypes.items()}\n",
     "\n",
-    "with open('../data/dtypes.json', 'w') as f:\n",
+    "with open('../config/dtypes.json', 'w') as f:\n",
     "    json.dump(dtype_mapping, f)"
    ]
   },
